--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/JMM1220/node-ayasc-await-demo#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "circular-json": "^0.5.9",
     "express": "^4.16.4",
     "wepack": "0.0.1"
